# GSL-4.0.0

./: CMakeLists.txt  googletest-1.12.1_build.sh
include/gsl/: algorithm  span
tests/: global_test_set.h  main.cpp  no_exception_ensure_tests.cpp
